# pb_plot_web

./: .gitignore  pyproject.toml
src/pb_plot_web/: __main__.py
src/pb_plot_web/templates/: plotly_index.html
